make uas_zone.geometry an array
